--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,6 @@
+$break-small: 450px;
+$break-large: 1000px;
+
 :root {
   background-color: black;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
@@ -11,9 +14,54 @@ a {
   }
 }
 
-.meh {
-  background-color: red;
+.root {
+  background-color: cyan;
+  display: grid;
+  // grid-template-rows: 25% auto 100px;
+  @media screen and (max-width: $break-small) {
+    grid-template-columns: 0% 50px auto 50px 0%;
+  }
+  @media screen and (min-width: $break-large) {
+    grid-template-columns: 10% 50px auto 50px 10%;
+  }
+  .layout {
+    // min-height: 80%;
+    background-color: #d3d3d3;
+    // margin: 30px;
+    // padding: 0px, 20px;
+    grid-column-start: 2;
+    grid-column-end: 5;
+    .content {
+      padding: 20px;
+    }
+  }
 }
+
+.header {
+  background: rgb(140, 140, 140);
+  background: linear-gradient(
+    0deg,
+    rgba(140, 140, 140, 0.6475183823529411) 0%,
+    rgba(181, 181, 181, 0.7651654411764706) 35%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  width: 100%;
+  padding: 5px 0px;
+  a {
+    // background-color: green;
+    padding: 2px 10px;
+    margin-right: 1px;
+    font-weight: bolder;
+    &:hover {
+      background-color: #d3d3d3;
+      text-decoration: none;
+    }
+  }
+}
+
+// .meh {
+//   background-color: red;
+// }
 
 // $font-size: 50px;
 // .example {
