--- a/styles.scss
+++ b/styles.scss
@@ -15,7 +15,7 @@ a {
 }
 
 .root {
-  background-color: cyan;
+  // background-color: cyan;
   display: grid;
   // grid-template-rows: 25% auto 100px;
   @media screen and (max-width: $break-small) {
@@ -57,6 +57,12 @@ a {
       text-decoration: none;
     }
   }
+}
+
+.aboutMe {
+  display: grid;
+  grid-template-columns: 50px 50px auto 50px 10%;
+
 }
 
 // .meh {
